<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E6E8FE">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/news_main_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/no_image" />

            <LinearLayout
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_margin="20dp">

                <LinearLayout
                    android:id="@+id/title_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/article_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/article_title"
                        android:textColor="#07080F"
                        android:textSize="20sp"
                        android:fontFamily="@font/montserrat_light"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="3dp"
                            app:srcCompat="@drawable/writer_icon"/>

                        <TextView
                            android:id="@+id/article_writer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/article_writer"
                            android:textColor="#07080F"
                            android:textSize="12sp"
                            android:fontFamily="@font/nunitosans_light"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginTop="7dp"
                        android:background="#07080F"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/article_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/article_content"
                    android:textColor="#141414"
                    android:textSize="12sp"
                    android:lineSpacingExtra="3dp"
                    android:fontFamily="@font/roboto_light"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/news_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8022264C">

            <ImageButton
                android:id="@+id/backbtn_news"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/back_icon" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>